--- a/bots/package.json
+++ b/bots/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "bot_script.ts",
   "scripts": {
-    "start": "npx tsx bot_script.ts",
+    "start": "npx tsx example.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc"
   },
